5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1667_2324.log
== TEST (2019-04-16 16:28:09) 
-- CODE:
nome = input("nome do bruxo ")
menerva = 10.7654/0.3479
belatrix = 10.674/1.789
if(nome==Menerva):
	mensagem = Menerva
else:
	mensagem = Belatriz
print(upper,mensagem)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(nome==Menerva):
NameError: name 'Menerva' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:13) 
-- CODE:
nome = input("nome do bruxo ")
menerva = 10.7654/0.3479
belatrix = 10.674/1.789
if(nome==Menerva):
	mensagem = Menerva
else:
	mensagem = Belatriz
print(upper,mensagem)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(nome==Menerva):
NameError: name 'Menerva' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:15) 
-- CODE:
nome = input("nome do bruxo ")
menerva = 10.7654/0.3479
belatrix = 10.674/1.789
if(nome==Menerva):
	mensagem = Menerva
else:
	mensagem = Belatriz
print(upper,mensagem)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(nome==Menerva):
NameError: name 'Menerva' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:31) 
-- CODE:
nome = input("nome do bruxo ")
menerva = 10.7654/0.3479
belatrix = 10.674/1.789
if(nome==Menerva):
	mensagem = Menerva
else:
	mensagem = Belatriz
print(upper,mensagem)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(nome==Menerva):
NameError: name 'Menerva' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:57) 
-- CODE:
nome = input("nome do bruxo ")
menerva = 10.7654/0.3479
belatrix = 10.674/1.789
if(nome==Menerva):
	mensagem = Menerva
else:
	mensagem = Belatriz
print(mensagem)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(nome==Menerva):
NameError: name 'Menerva' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:42) 
-- CODE:
nome = input("nome do bruxo ")
menerva = 10.7654/0.3479
belatrix = 10.674/1.789
if(nome==Menerva):
	mensagem = Menerva
else:
	mensagem = Belatriz
print(mensagem)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(nome==Menerva):
NameError: name 'Menerva' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:03) 
-- CODE:
nome = input("nome do bruxo ")
menerva = 10.7654/0.3479
belatrix = 10.674/1.789
if(nome==Menerva):
	mensagem = Menerva
else:
	mensagem = Belatriz
print(mensagem)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(nome==Menerva):
NameError: name 'Menerva' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:13) 
-- CODE:
nome = input("nome do bruxo ")
menerva = 10.7654/0.3479
belatrix = 10.674/1.789
if(nome==Menerva):
	mensagem = Menerva
else:
	mensagem = Belatriz
print(mensagem)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(nome==Menerva):
NameError: name 'Menerva' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:34:41) 
-- CODE:
nome = input("nome do bruxo ")
menerva = 10.7654/0.3479
belatrix = 10.674/1.789
if(nome==Menerva):
	mensagem = Menerva
else:
	mensagem = Belatriz
print(mensagem)



-- EXECUTION TIME:
0.179866
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2324/main.py", line 4, in <module>
    if(nome==Menerva):
NameError: name 'Menerva' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:31) 
-- CODE:
nome = input("nome do bruxo ")
menerva = 10.7654/0.3479
belatrix = 10.674/1.789
if(nome==Menerva):
	mensagem = Menerva
else:
	mensagem = Belatriz
print(mensagem)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(nome==Menerva):
NameError: name 'Menerva' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:53) 
-- CODE:
nome = input("nome do bruxo ")
minerva = 10.7654/0.3479
belatrix = 10.674/1.789
if(nome==Mimnerva):
	mensagem = Minerva
else:
	mensagem = Belatriz
print(mensagem)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(nome==Mimnerva):
NameError: name 'Mimnerva' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:02) 
-- CODE:
nome = input("nome do bruxo ")
minerva = 10.7654/0.3479
belatrix = 10.674/1.789
if(nome==Mimnerva):
	mensagem = Minerva
else:
	mensagem = Belatriz
print(mensagem)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(nome==Mimnerva):
NameError: name 'Mimnerva' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:38:02) 
-- CODE:
nome = input("nome do bruxo ")
minerva = 10.7654/0.3479
belatrix = 10.674/1.789
if(nome==Mimnerva):
	mensagem = Minerva
else:
	mensagem = Belatriz
print(mensagem)



-- EXECUTION TIME:
0.111112
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2324/main.py", line 4, in <module>
    if(nome==Mimnerva):
NameError: name 'Mimnerva' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
